--- a/Assistant/Assistant/app/build.gradle
+++ b/Assistant/Assistant/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     compile('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
         transitive = true
     }
-//    compile 'com.github.rey5137:material:1.2.2'
+    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.android.support:support-v4:20.+'
 }
 
 repositories {
