--- a/Assistant/Assistant/app/build.gradle
+++ b/Assistant/Assistant/app/build.gradle
@@ -2,12 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     signingConfigs {
-        debug {
-            keyAlias 'hieuapp'
-            keyPassword 'hieu20121700'
-            storeFile file('/home/hieuapp/debug.keystore')
-            storePassword 'hieu20121700'
-        }
     }
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
@@ -29,8 +23,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.prolificinteractive:material-calendarview:1.2.0'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -38,7 +32,7 @@ dependencies {
     compile('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
         transitive = true
     }
-    compile "com.daimajia.swipelayout:library:1.2.0@aar"
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     compile 'com.android.support:support-v4:20.+'
 }
 
