--- a/Assistant/Assistant/app/src/main/AndroidManifest.xml
+++ b/Assistant/Assistant/app/src/main/AndroidManifest.xml
@@ -18,21 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".camera.CameraActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
         <activity
             android:label="@string/calendar_activity_label"
             android:name="com.sunbook.parrot.calendar.CalendarActivity"
             android:parentActivityName=".MainActivity">
         </activity>
-        <activity
-            android:name=".checklist.ChecklistActivity"
-            android:label="@string/checklist_activity_label"
-            android:theme="@style/CheckListTheme"
-            android:parentActivityName=".MainActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" />
-
-        </activity>
     </application>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
